fix: correct image layout height overflow and content width ratios

--- a/themes/azusa3.css
+++ b/themes/azusa3.css
@@ -354,7 +354,7 @@ section.image-right,
 section.image-left {
   display: grid !important;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto minmax(0, 1fr);
 }
 
 section.image-right > h1,
@@ -438,27 +438,50 @@ section.image-left > .content {
 }
 
 /* Width adjustments - Grid columns */
-section.image-right.content-30,
+section.image-right.content-20 {
+  grid-template-columns: 80fr 20fr;
+}
+
+section.image-left.content-20 {
+  grid-template-columns: 20fr 80fr;
+}
+
+section.image-right.content-30 {
+  grid-template-columns: 70fr 30fr;
+}
+
 section.image-left.content-30 {
   grid-template-columns: 30fr 70fr;
 }
 
-section.image-right.content-40,
+section.image-right.content-40 {
+  grid-template-columns: 60fr 40fr;
+}
+
 section.image-left.content-40 {
   grid-template-columns: 40fr 60fr;
 }
 
-section.image-right.content-60,
+section.image-right.content-60 {
+  grid-template-columns: 40fr 60fr;
+}
+
 section.image-left.content-60 {
   grid-template-columns: 60fr 40fr;
 }
 
-section.image-right.content-70,
+section.image-right.content-70 {
+  grid-template-columns: 30fr 70fr;
+}
+
 section.image-left.content-70 {
   grid-template-columns: 70fr 30fr;
 }
 
-section.image-right.content-80,
+section.image-right.content-80 {
+  grid-template-columns: 20fr 80fr;
+}
+
 section.image-left.content-80 {
   grid-template-columns: 80fr 20fr;
 }
